# woovet-forecast-python

./: .gitignore  Dockerfile  index.py  lambda_function.py  main.py  pyproject.toml  routes.py
controllers/: appointment.py  client.py  patient.py  referrals.py  sales.py
forecastFunctions/: appointment.py  client.py  patient.py  referrals.py  sales.py
utils/: mongo_client.py
utils/helper/: response_helper.py
